--- a/examples/MAC/ESP32-CAM Opencv Example/Makefile
+++ b/examples/MAC/ESP32-CAM Opencv Example/Makefile
@@ -1,3 +1,3 @@
 all:
-	g++ -o2 -o example.app example.cpp ESP32-CAM\ Library.cpp `pkg-config opencv4 --cflags --libs` -lpthread -lcurl -std=c++11 -m64 -D _MAC_
-	./example.app
+	g++ -o2 -o example example.cpp ESP32-CAM\ Library.cpp `pkg-config opencv4 --cflags --libs` -lpthread -lcurl -std=c++11 -m64 -D _MAC_
+	./example
